# world-weaver

./: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
db/: dev.sqlite-journal
documentation/: openapi.yml
prisma/: schema.prisma  seed.ts
prisma/migrations/20241102002337_created_rectangle/: migration.sql
prisma/migrations/20241103235500_created_basic_world_elements/: migration.sql
prisma/migrations/20241104001221_added_order_to_polygon_nodes/: migration.sql
prisma/migrations/20241213223801_added_nonsql_document/: migration.sql
prisma/migrations/20241214031005_added_world_cuid/: migration.sql
prisma/migrations/20241215194349_switched_to_kysely/: migration.sql
prisma/migrations/20241215212920_reworked_data_model/: migration.sql
prisma/migrations/20241216011518_added_network_start_node_to_schema/: migration.sql
prisma/migrations/20241216022724_added_polygon_start_point/: migration.sql
prisma/migrations/20241217223539_added_network_edges/: migration.sql
prisma/migrations/20241217225116_check_edges_connect_only_nodes_of_same_network/: migration.sql
prisma/migrations/20241217235149_made_network_start_node_optional/: migration.sql
src/: app.d.ts  hooks.server.ts
src/lib/: ajv-schema-datetime-bugfix.ts  ajv.ts  data.json  database.server.ts  database.ts  json-schema-builder.ts  store.ts  types.ts
src/lib/api/: client.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/rust/: avl_tree.rs  lib.rs
src/test/: change-history.test.ts  changes-manager.test.ts
(+82 files in other folders)
