[package]
name = "world-weaver"
version = "0.1.0"
authors = ["Codemozart <thecodemozart@gmail.com>"]
edition = "2021"

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tsify = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
